[gd_scene load_steps=3 format=3 uid="uid://7dhhwo8j7gko"]

[ext_resource type="Script" uid="uid://b07nh800o7gfa" path="res://scripts/environment/ResourceNode.gd" id="1"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1"]
size = Vector2(24, 24)

[node name="ResourceNode" type="StaticBody2D"]
collision_layer = 129
script = ExtResource("1")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -12.0
offset_top = -12.0
offset_right = 12.0
offset_bottom = 12.0
color = Color(0.8, 0.4, 0.1, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_1")

[node name="HarvestTimer" type="Timer" parent="."]

[node name="RespawnTimer" type="Timer" parent="."]
